--- a/css/global.css
+++ b/css/global.css
@@ -60,12 +60,13 @@ body {
   margin: 0;
   padding: 0; }
 
-.ExternalClass {
+/*.ExternalClass {
   width: 100%;
-  line-height: 100%; }
-  .ExternalClass p, .ExternalClass span, .ExternalClass font, .ExternalClass td, .ExternalClass div {
-    line-height: 100%; }
-
+  line-height: 100%;
+  p, span, font, td, div {
+    line-height: 100%;
+  }
+}*/
 img {
   outline: none;
   text-decoration: none;
@@ -133,10 +134,6 @@ table.columns, table.column {
   margin: 0 auto; }
   table.columns .text-pad, table.column .text-pad {
     padding-left: 10px;
-    padding-right: 10px; }
-  table.columns .left-text-pad, table.column .left-text-pad {
-    padding-left: 10px; }
-  table.columns .right-text-pad, table.column .right-text-pad {
     padding-right: 10px; }
 table.columns td, table.column td {
   padding: 0px 0px 10px; }
@@ -272,13 +269,13 @@ td.expander {
 table.columns .text-pad, table.column .text-pad {
   padding-left: 10px;
   padding-right: 10px; }
-table.columns .left-text-pad, table.columns .text-pad-left {
+table.columns .text-pad-left {
   padding-left: 10px; }
-table.column .left-text-pad, table.column .text-pad-left {
+table.column .text-pad-left {
   padding-left: 10px; }
-table.columns .right-text-pad, table.columns .text-pad-right {
+table.columns .text-pad-right {
   padding-right: 10px; }
-table.column .right-text-pad, table.column .text-pad-right {
+table.column .text-pad-right {
   padding-right: 10px; }
 
 /* Block Grid */
@@ -323,8 +320,10 @@ img.center {
   margin: 0 auto;
   float: none; }
 
-.show-for-small, .hide-for-desktop {
-  display: none; }
+.show-for-small {
+  display: none;
+  max-height: 0;
+  overflow: hidden; }
 
 /* Typography */
 body, table.body, h1, h2, h3, h4, h5, h6, p, td {
@@ -496,8 +495,6 @@ body.outlook p {
     padding-right: 0px !important;
     padding-left: 0px !important;
     display: block !important; }
-  table[class="body"] .wrapper.first .columns, table[class="body"] .wrapper.first .column {
-    display: table !important; }
   table[class="body"] table.columns td, table[class="body"] table.column td {
     width: 100% !important; }
   table[class="body"] .columns td.one, table[class="body"] .column td.one {
@@ -528,13 +525,15 @@ body.outlook p {
     padding-left: 0 !important; }
   table[class="body"] table.columns td.expander {
     width: 1px !important; }
-  table[class="body"] .right-text-pad, table[class="body"] .text-pad-right {
+  table[class="body"] .text-pad-right {
     padding-left: 10px !important; }
-  table[class="body"] .left-text-pad, table[class="body"] .text-pad-left {
+  table[class="body"] .text-pad-left {
     padding-right: 10px !important; }
-  table[class="body"] .hide-for-small, table[class="body"] .show-for-desktop {
-    display: none !important; }
-  table[class="body"] .show-for-small, table[class="body"] .hide-for-desktop {
+  table[class="body"] .hide-for-small {
+    display: none !important;
+    max-height: auto !important;
+    overflow: inherit !important; }
+  table[class="body"] .show-for-small {
     display: inherit !important; } }
 a.text-underline {
   text-decoration: underline; }
