--- a/css/partials/_general.scss
+++ b/css/partials/_general.scss
@@ -7,3 +7,10 @@ a {
 .inline-block {
   display: inline-block;
 }
+
+td.no-hyphens {
+	word-break: normal !important;
+	-webkit-hyphens: none !important;
+	-moz-hyphens: none !important;
+	hyphens: none !important;
+}
