--- a/css/partials/_text.scss
+++ b/css/partials/_text.scss
@@ -166,7 +166,12 @@ h5 {
 .inline-block {
   display: inline-block;
 }
-
+.valign-middle{
+  vertical-align: middle;
+}
+.valign-super{
+  vertical-align: super;
+}
 @media only screen and (max-width: 600px) {
   .text-size-17 {
     font-size: 19px;
