--- a/css/partials/_general.scss
+++ b/css/partials/_general.scss
@@ -8,9 +8,10 @@ a {
   display: inline-block;
 }
 
-td.no-hyphens {
-	word-break: normal !important;
-	-webkit-hyphens: none !important;
-	-moz-hyphens: none !important;
-	hyphens: none !important;
+.no-word-break {
+  word-break:keep-all;
+  -moz-hyphens:none;
+  -ms-hyphens:none;
+  -webkit-hyphens: none;
+  hyphens:none;
 }
