--- a/css/global.css
+++ b/css/global.css
@@ -582,6 +582,9 @@ a.text-underline {
 .pb-0 {
   padding-bottom: 0 !important; }
 
+.pb-5 {
+  padding-bottom: 5px !important; }
+
 .pb-10 {
   padding-bottom: 10px !important; }
 
