--- a/css/partials/_margin-padding.scss
+++ b/css/partials/_margin-padding.scss
@@ -25,6 +25,9 @@
 .pb-0 {
   padding-bottom: 0 !important;
 }
+.pb-5 {
+  padding-bottom: 5px !important;
+}
 .pb-10 {
   padding-bottom: 10px !important;
 }
