--- a/css/global.css
+++ b/css/global.css
@@ -530,7 +530,10 @@ body.outlook p {
   table[class="body"] .text-pad-left {
     padding-right: 10px !important; }
   table[class="body"] .hide-for-small {
-    display: none !important; }
+    display: none !important;
+    height: 0;
+    width: 0;
+    visibility: hidden; }
   table[class="body"] .show-for-small {
     display: inherit !important;
     max-height: unset !important;
@@ -541,11 +544,19 @@ a.text-underline {
 .inline-block {
   display: inline-block; }
 
-td.no-hyphens {
-  word-break: normal !important;
-  -webkit-hyphens: none !important;
-  -moz-hyphens: none !important;
-  hyphens: none !important; }
+.no-word-break {
+  word-break: keep-all;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  -webkit-hyphens: none;
+  hyphens: none; }
+
+/* Does not work on all email clients. */
+.hidden {
+  display: none;
+  height: 0;
+  width: 0;
+  visibility: hidden; }
 
 .clearfix:before, .clearfix:after {
   content: " ";
@@ -579,6 +590,9 @@ td.no-hyphens {
 
 .pb-0 {
   padding-bottom: 0 !important; }
+
+.pb-5 {
+  padding-bottom: 5px !important; }
 
 .pb-10 {
   padding-bottom: 10px !important; }
@@ -679,6 +693,12 @@ td.no-hyphens {
   margin-top: 0 !important;
   margin-bottom: 0 !important; }
 
+@media only screen and (max-width: 600) {
+  .pb-0-sm {
+    padding-bottom: 0 !important; }
+
+  .pt-0-sm {
+    padding-top: 0 !important; } }
 @media only screen and (min-width: 601px) {
   .p-0-md {
     padding: 0 !important; }
@@ -1103,6 +1123,9 @@ table.button-dark-gray:hover td {
     white-space: normal !important; } }
 .img-responsive {
   width: 100% !important; }
+
+img.heading-icon {
+  width: 80px; }
 
 .img-border {
   border: 1px solid #737373;
