found a solution for centering event banner but having issues with gmail and outlook 2010,2013

--- a/css/global.css
+++ b/css/global.css
@@ -551,6 +551,9 @@ a.text-underline {
   -webkit-hyphens: none;
   hyphens: none; }
 
+.pull-right {
+  float: right !important; }
+
 /* Does not work on all email clients. */
 .hidden {
   display: none;
