--- a/css/partials/_general.scss
+++ b/css/partials/_general.scss
@@ -19,6 +19,9 @@ a {
 .pull-right {
   float: right !important;
 }
+.width-auto{
+  width:auto !important;
+}
 
 /* Does not work on all email clients. */
 .hidden {
