--- a/css/global.css
+++ b/css/global.css
@@ -554,6 +554,9 @@ a.text-underline {
 .pull-right {
   float: right !important; }
 
+.width-auto {
+  width: auto !important; }
+
 /* Does not work on all email clients. */
 .hidden {
   display: none;
@@ -1134,12 +1137,19 @@ img.heading-icon {
   border: 1px solid #737373;
   position: relative; }
 
+.img-crop {
+  overflow: hidden;
+  height: 118px; }
+
 @media only screen and (max-width: 600px) {
   .img-center-sm {
     text-align: center !important; }
     .img-center-sm img {
       float: none !important;
-      display: inline !important; } }
+      display: inline !important; }
+
+  .img-crop {
+    height: 154px; } }
 .mso-table-fix {
   mso-table-lspace: 0pt;
   mso-table-rspace: 0pt; }
