--- a/css/global.css
+++ b/css/global.css
@@ -557,6 +557,12 @@ a.text-underline {
 .width-auto {
   width: auto !important; }
 
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  float: none; }
+
 /* Does not work on all email clients. */
 .hidden {
   display: none;
@@ -1140,6 +1146,14 @@ img.heading-icon {
 .img-crop {
   overflow: hidden;
   height: 118px; }
+  .img-crop img {
+    height: 118px; }
+
+.img-cover {
+  width: 202px;
+  height: 118px;
+  background-size: cover;
+  border: 1px solid #737373; }
 
 @media only screen and (max-width: 600px) {
   .img-center-sm {
@@ -1149,7 +1163,15 @@ img.heading-icon {
       display: inline !important; }
 
   .img-crop {
-    height: 154px; } }
+    height: 154px !important; }
+    .img-crop img {
+      height: 154px; }
+
+  .img-cover {
+    width: 262px !important;
+    height: 154px !important;
+    background-size: cover;
+    border: 1px solid #737373; } }
 .mso-table-fix {
   mso-table-lspace: 0pt;
   mso-table-rspace: 0pt; }
