--- a/css/global.css
+++ b/css/global.css
@@ -1140,35 +1140,12 @@ img.heading-icon {
   border: 1px solid #737373;
   position: relative; }
 
-.img-crop {
-  overflow: hidden;
-  height: 118px; }
-  .img-crop img {
-    height: 118px; }
-
-.img-cover {
-  width: 202px;
-  height: 118px;
-  background-size: cover;
-  border: 1px solid #737373; }
-
 @media only screen and (max-width: 600px) {
   .img-center-sm {
     text-align: center !important; }
     .img-center-sm img {
       float: none !important;
-      display: inline !important; }
-
-  .img-crop {
-    height: 154px !important; }
-    .img-crop img {
-      height: 154px; }
-
-  .img-cover {
-    width: 262px !important;
-    height: 154px !important;
-    background-size: cover;
-    border: 1px solid #737373; } }
+      display: inline !important; } }
 .mso-table-fix {
   mso-table-lspace: 0pt;
   mso-table-rspace: 0pt; }
