--- a/css/global.css
+++ b/css/global.css
@@ -957,6 +957,9 @@ h5 {
 .valign-middle {
   vertical-align: middle; }
 
+.valign-top {
+  vertical-align: top; }
+
 .valign-super {
   vertical-align: super; }
 
