--- a/css/global.css
+++ b/css/global.css
@@ -547,6 +547,12 @@ a.text-underline {
   -webkit-hyphens: none;
   hyphens: none; }
 
+.no-wrap {
+  white-space: nowrap; }
+
+.text-right {
+  text-align: right; }
+
 .pull-right {
   float: right !important; }
 
@@ -555,6 +561,10 @@ a.text-underline {
   margin-left: auto;
   margin-right: auto;
   float: none; }
+
+table.max-width {
+  width: 100%;
+  table-layout: fixed; }
 
 /* Does not work on all email clients. */
 .hidden {
