--- a/css/global.scss
+++ b/css/global.scss
@@ -595,7 +595,7 @@ body.outlook p {
   display: inline !important;
 }
 
-/*  Media Queries */
+/*  Media Queries: Mobile */
 
 @media only screen and (max-width: 600px) {
   table[class="body"] {
