--- a/css/partials/_images.scss
+++ b/css/partials/_images.scss
@@ -1,9 +1,15 @@
-.img-responsive {
+/*.img-responsive {
   width: 100% !important;
-}
+}*/
 
-img.heading-icon {
-  width: 80px;
+img {
+	&.heading-icon {
+		width: 80px;
+	}
+	&.inline-block {
+		clear: none;
+		float: none;
+	}
 }
 
 .img-border {
