--- a/css/partials/_text.scss
+++ b/css/partials/_text.scss
@@ -173,6 +173,20 @@
 	}
 }
 
+.text-size-10 {
+	font-size: 10px;
+
+	td {
+		font-size: 10px;
+	}
+	p {
+		font-size: 10px;
+	}
+	span {
+		font-size: 10px;
+	}
+}
+
 h1 {
 	font-size: 27px;
 }
