--- a/css/global.scss
+++ b/css/global.scss
@@ -24,10 +24,14 @@ img {
   text-decoration: none;
   -ms-interpolation-mode: bicubic;
   width: auto;
-  max-width: 100%;
+	/*max-width: 100%;*/
   float: left;
   clear: both;
   display: block;
+}
+
+img:not(.no-max-width) {
+	max-width: 100%;
 }
 
 center {
