--- a/css/global.css
+++ b/css/global.css
@@ -557,9 +557,23 @@ a.text-underline {
 .text-right {
   text-align: right; }
 
-.pull-right {
-  float: right !important; }
+.pull-left {
+  float: left;
+}
 
+.pull-right {
+  float: right;
+}
+
+@media only screen and (max-width: 600px) {
+  .pull-left-sm {
+    float: left !important;
+  }
+
+  .pull-right-sm {
+    float: right !important;
+  }
+}
 .center-block {
   display: block;
   margin-left: auto;
@@ -611,6 +625,10 @@ td.p-0 {
 
 .pt-10 {
   padding-top: 10px !important; }
+
+.pt-15 {
+  padding-top: 15px !important;
+}
 
 .pt-20 {
   padding-top: 20px !important; }
@@ -1004,6 +1022,10 @@ h5 {
 .valign-super {
   vertical-align: super; }
 
+.text-right {
+  text-align: right;
+}
+
 @media only screen and (max-width: 600px) {
   .text-size-17 {
     font-size: 19px; }
@@ -1063,30 +1085,55 @@ h5 {
     font-size: 29px; }
 
   h5 {
-    font-size: 17px; } }
+    font-size: 17px;
+  }
+
+  .text-left-sm {
+    text-align: left !important;
+  }
+}
+
+table.button {
+  overflow: visible;
+}
+
 table.button.button-width-auto {
   width: auto;
-  display: inline-block; }
+  display: inline-block;
+}
+
 table.button.button-underline a, table.button.button-underline a:visited {
-  text-decoration: underline; }
+  text-decoration: underline;
+}
+
 table.button td {
-  padding: 3px 15px;
+  padding: 5px 15px;
   /* NOTE: Need to add !important when using this on O2 */
-  color: #ffffff; }
-  table.button td a, table.button td a:visited {
-    font-size: 19px;
-    line-height: 1.3em;
     color: #ffffff; }
-    table.button td a > span, table.button td a:visited > span {
+
+table.button td a, table.button td a:visited {
+  font-size: 19px;
+  line-height: 1em;
       color: #ffffff; }
+
+table.button td a > span, table.button td a:visited > span {
+  color: #ffffff;
+}
+
 table.button:hover td {
-  color: #ffffff; }
-  table.button:hover td a {
-    color: #ffffff !important; }
+  color: #ffffff;
+}
+
+table.button:hover td a {
+  color: #ffffff !important;
+}
+
 table.button td a:visited, table.button:active td a {
-  color: #ffffff !important; }
-  table.button td a:visited > span, table.button:active td a > span {
     color: #ffffff !important; }
+
+table.button td a:visited > span, table.button:active td a > span {
+  color: #ffffff !important;
+}
 table.button-blue td {
   background-color: #007db8;
   border: 1px solid #007db8; }
@@ -1154,25 +1201,29 @@ table.button-dark-gray:hover td {
   background: #333333 !important;
   border: 1px solid #333333; }
 
-/*@media only screen and (min-width: 601px) {
-  table {
-    &.button {
-      &.button-width-auto {
-        width: auto;
-        display: inline-block;
-      }
-    }
-  }
-}*/
+table.button-wrapper {
+  margin-top: 20px;
+}
+
+table.button-wrapper .button {
+  margin: 0;
+}
+
+.text-size-13 table.button td {
+  padding-bottom: 7px;
+}
+
+.text-size-13 table.button td a, .text-size-13 table.button td a:visited {
+  font-size: 13px;
+  line-height: 1.3em;
+}
+
 @media only screen and (max-width: 600px) {
   table.button.button-width-auto {
     width: 100% !important;
     display: table !important; }
   table.button td a, table.button td a:visited {
     white-space: normal !important; } }
-/*.img-responsive {
-  width: 100% !important;
-}*/
 img.heading-icon {
   width: 80px; }
 img.inline-block {
