--- a/css/partials/_buttons.scss
+++ b/css/partials/_buttons.scss
@@ -1,5 +1,7 @@
 table {
   &.button {
+		overflow: visible;
+
     &.button-width-auto {
       width: auto;
       display: inline-block;
@@ -10,11 +12,11 @@ table {
       }
     }
     td {
-      padding: 3px 15px; /* NOTE: Need to add !important when using this on O2 */
+			padding: 5px 15px; /* NOTE: Need to add !important when using this on O2 */
       color: #ffffff;
       a, a:visited {
         font-size: 19px;
-        line-height: 1.3em;
+				line-height: 1em;
         color: #ffffff;
         > span {
           color: #ffffff;
@@ -144,18 +146,27 @@ table {
       border: 1px solid #333333;
     }
   }
+	&.button-wrapper {
+		margin-top: 20px;
+		.button {
+			margin: 0;
+		}
+	}
 }
 
-/*@media only screen and (min-width: 601px) {
+.text-size-13 {
   table {
     &.button {
-      &.button-width-auto {
-        width: auto;
-        display: inline-block;
+			td {
+				padding-bottom: 7px;
+				a, a:visited {
+					font-size: 13px;
+					line-height: 1.3em;
+				}
       }
     }
   }
-}*/
+}
 
 @media only screen and (max-width: 600px) {
   table {
