Modified .htaccess to work on local wamp server.
Change-Id: I6fb43366e6d9ae28209c5d4495b1c9039a77a82b

--- a/css/partials/_buttons.scss
+++ b/css/partials/_buttons.scss
@@ -158,7 +158,7 @@ table {
   table {
     &.button {
 			td {
-				padding-bottom: 7px;
+				//padding-bottom: 7px;
 				a, a:visited {
 					font-size: 13px;
 					line-height: 1.3em;
