--- a/css/global-v2.css
+++ b/css/global-v2.css
@@ -563,6 +563,7 @@ table.button td a, table.button td a:visited {
   font-size: 16px;
   white-space: nowrap;
   display: block;
+  word-break: keep-all;
 }
 
 table.button td.button-grey {
@@ -647,25 +648,20 @@ body.outlook p {
     width: auto !important;
     height: auto !important;
   }
-
   table[class="body"] center {
     min-width: 0 !important;
   }
-
   table[class="body"] .container {
     width: 95% !important;
   }
-
   table[class="body"] .row {
     width: 100% !important;
     display: block !important;
   }
-
   table[class="body"] .wrapper {
     display: block !important;
     padding-right: 0 !important;
   }
-
   table[class="body"] .columns, table[class="body"] .column {
     table-layout: fixed !important;
     float: none !important;
@@ -674,11 +670,9 @@ body.outlook p {
     padding-left: 0px !important;
     display: block !important;
   }
-
   table[class="body"] table.columns td, table[class="body"] table.column td {
     width: 100% !important;
   }
-
   table[class="body"] .columns td.one, table[class="body"] .column td.one {
     width: 8.333333% !important;
   }
@@ -687,7 +681,6 @@ body.outlook p {
     width: 100% !important;
     display: block !important;
   }
-
   table[class="body"] .columns td.two, table[class="body"] .column td.two {
     width: 16.666666% !important;
   }
@@ -696,7 +689,6 @@ body.outlook p {
     width: 100% !important;
     display: block !important;
   }
-
   table[class="body"] .columns td.three, table[class="body"] .column td.three {
     width: 25% !important;
   }
@@ -705,7 +697,6 @@ body.outlook p {
     width: 100% !important;
     display: block !important;
   }
-
   table[class="body"] .columns td.four, table[class="body"] .column td.four {
     width: 33.333333% !important;
   }
@@ -714,7 +705,6 @@ body.outlook p {
     width: 100% !important;
     display: block !important;
   }
-
   table[class="body"] .columns td.five, table[class="body"] .column td.five {
     width: 41.666666% !important;
   }
@@ -723,7 +713,6 @@ body.outlook p {
     width: 100% !important;
     display: block !important;
   }
-
   table[class="body"] .columns td.six, table[class="body"] .column td.six {
     width: 50% !important;
   }
@@ -732,7 +721,6 @@ body.outlook p {
     width: 100% !important;
     display: block !important;
   }
-
   table[class="body"] .columns td.seven, table[class="body"] .column td.seven {
     width: 58.333333% !important;
   }
@@ -741,7 +729,6 @@ body.outlook p {
     width: 100% !important;
     display: block !important;
   }
-
   table[class="body"] .columns td.eight, table[class="body"] .column td.eight {
     width: 66.666666% !important;
   }
@@ -750,7 +737,6 @@ body.outlook p {
     width: 100% !important;
     display: block !important;
   }
-
   table[class="body"] .columns td.nine, table[class="body"] .column td.nine {
     width: 75% !important;
   }
@@ -759,7 +745,6 @@ body.outlook p {
     width: 100% !important;
     display: block !important;
   }
-
   table[class="body"] .columns td.ten, table[class="body"] .column td.ten {
     width: 83.333333% !important;
   }
@@ -768,7 +753,6 @@ body.outlook p {
     width: 100% !important;
     display: block !important;
   }
-
   table[class="body"] .columns td.eleven, table[class="body"] .column td.eleven {
     width: 91.666666% !important;
   }
@@ -777,7 +761,6 @@ body.outlook p {
     width: 100% !important;
     display: block !important;
   }
-
   table[class="body"] .columns td.twelve, table[class="body"] .column td.twelve {
     width: 100% !important;
   }
@@ -785,30 +768,24 @@ body.outlook p {
   table[class="body"] .columns td.twelve.sub-columns, table[class="body"] .column td.twelve.sub-columns {
     display: block !important;
   }
-
   table[class="body"] td.offset-by-one, table[class="body"] td.offset-by-two, table[class="body"] td.offset-by-three, table[class="body"] td.offset-by-four, table[class="body"] td.offset-by-five, table[class="body"] td.offset-by-six, table[class="body"] td.offset-by-seven, table[class="body"] td.offset-by-eight, table[class="body"] td.offset-by-nine, table[class="body"] td.offset-by-ten, table[class="body"] td.offset-by-eleven {
     padding-left: 0 !important;
   }
-
   table[class="body"] table.columns td.expander {
     width: 1px !important;
   }
-
   table[class="body"] .text-pad-right {
     padding-left: 10px !important;
   }
-
   table[class="body"] .text-pad-left {
     padding-right: 10px !important;
   }
-
   table[class="body"] .hide-for-small {
     display: none !important;
     height: 0;
     width: 0;
     visibility: hidden;
   }
-
   table[class="body"] .show-for-small {
     display: inherit !important;
     max-height: unset !important;
@@ -1598,7 +1575,6 @@ h5 {
     text-align: left !important;
   }
 }
-
 table.button {
   overflow: visible;
 }
@@ -1731,17 +1707,12 @@ table.button-dark-gray:hover td {
   background: #333333 !important;
   border: 1px solid #333333;
 }
-
 table.button-wrapper {
   margin-top: 20px;
 }
 
 table.button-wrapper .button {
   margin: 0;
-}
-
-.text-size-13 table.button td {
-  padding-bottom: 7px;
 }
 
 .text-size-13 table.button td a, .text-size-13 table.button td a:visited {
@@ -1754,7 +1725,6 @@ table.button-wrapper .button {
     width: 100% !important;
     display: table !important;
   }
-
   table.button td a, table.button td a:visited {
     white-space: normal !important;
   }
