--- a/css/partials/_ink.scss
+++ b/css/partials/_ink.scss
@@ -516,6 +516,7 @@ table {
 				font-size: 16px;
 				white-space: nowrap;
 				display: block;
+				word-break: keep-all;
 			}
 			&.button-grey {
 				background: #eeeeee;
